--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
  .header {
      background-image: url("../img/header3.jpg");
      width: 100%;
-     height: 60vh;
+     height: 50vh;
      background-position: center;
      display: flex;
      flex-direction: column;
@@ -82,8 +82,18 @@
     font-size: 20px;
     
 }
+.favlist__cards{
+    list-style: none;
+}
+.characterlist__cards {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    
+}
 
-.favlist__cards {
+.list__art {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -94,28 +104,40 @@
     transition: 0.25s all;
     width: 15vw;
     text-align: center;
-    list-style: none;
+    background-color: #edc570;
+    cursor: pointer;
     
 }
-.characterlist__cards {
-    list-style: none;
-}
+
 
 .list__card--img {
     width: 100%;
-    object-fit: cover;
+    height: 220px;
+    
+    
 }
 
 .list__card--title {
     font-weight: 600;
-    padding: 10px;
-    color: #878197;
+    padding: 5px;
+    color: white;
     font-size: 15px;
 }
 
 .list__card--description {
-    padding: 10px;
+    padding: 5px;
+    color: white;
+    font-size: 14px;
+    
 }
+
+/* ELEMENTOS SELECCIONADOS */
+
+.list__art.selected {
+    background-color: orange;
+    color: white;
+}
+
 
 /* FOOTER */
 .footer {
