--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@
     text-align: center;
     background-color: #edc570;
     cursor: pointer;
+    box-shadow: 10px 5px 5px grey;
     
 }
 
@@ -113,6 +114,7 @@
 .list__card--img {
     width: 100%;
     height: 220px;
+    object-fit: cover;
     
     
 }
