--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@
     color: white;
     width: 10%;
     border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .button__refresh{
     background-color: orange;
@@ -61,7 +62,9 @@
     padding: 5px;
     margin: 5px;
     color: white;
+    width: 25%;
     border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
 }
 .input {
@@ -70,6 +73,7 @@
     border: 0.5px solid orange;
     color: grey;
     width: 80%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 
@@ -80,16 +84,20 @@
     width: 100%;
     display: flex;
     padding-left: 80px;
+    
 }
 .section__fav {
     width: 30% ;
     color: orange;
     font-size: 20px;
+    
+    
 }
 .section__characters {
     width: 70%;
     color: orange;
     font-size: 20px;
+   
     
 }
 .favlist__cards{
@@ -116,7 +124,7 @@
     text-align: center;
     background-color: #edc570;
     cursor: pointer;
-    box-shadow: 10px 5px 5px grey;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     
 }
 
@@ -161,7 +169,7 @@
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 12px;
+    font-size: 14px;
     
 }
 
