just changing colors from the final version

--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@
 /* ELEMENTOS SELECCIONADOS */
 
 .list__art.selected {
-    background-color: orange;
+    background-color: rgb(237, 174, 56);
     color: white;
 }
 
